<resources>
    <string name="app_name">Mobifone TN</string>
    <string name="toolbar_title">HotLine: 0903669889</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="ThuTuc">Thủ Tục</string>
    <string name="KM">Khuyến Mãi</string>
    <string name="Lienhe">Liên hệ</string>hệ
    <string name="Menhgia">Mệnh giá</string>
    <string name="Moblie">Moblie Internet</string>
    <string name="DVphu">Dịch vụ phụ</string>
    <string name="CVQT">Chuyển vùng quốc tế</string>
    <string name="error">Không có dữ diệu.</string>
    <string name="error_connect">Không kết nối được Internet …</string>
    <string name="so_tk">Số tài khoản:</string>
    <string name="sdt">Số điện thoại:</string>
    <string name="ten_tk">Ngân hàng:</string>
    <string name="blank"/>
    <string name="name">Tên</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="s_nh">Số nhà</string>
    <string name="ng">Đường</string>
    <string name="ph_ng">Phường</string>
    <string name="qu_n">Quận</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="t_n_kh_ch_h_ng">Tên khách hàng</string>
    <string name="gopy_text">Mời bạn nhập nội dung góp ý để chúng tôi phục vụ bạn tốt hơn. Xin chân thành cảm ơn!</string>
    <string name="g_i">Gửi</string>
    <string name="name_empty">Mời bạn nhập tên!</string>
    <string name="noidung_empty">Bạn chưa nhập nội dung cần góp ý!</string>
    <string name="sdt_empty">Mời bạn nhập số điện thoại!</string>
    <string name="sdt_error">Số điện thoại bạn nhập không hợp lệ(9–12)!</string>
    <string name="c_ng_ty_tnhh_tmdv_vi_n_th_ng_th_nh_nh_n"><![CDATA[CÔNG TY TNHH TMDV & VIỄN THÔNG THÀNH NHÂN]]></string>
    <string name="email">Email:</string>
    <string name="vienthongthanhnhan_gmail_com">vienthongthanhnhan@gmail.com</string>
    <string name="di_ng">Di động:</string>
    <string name="_0901067979">0901067979</string>
    <string name="hotline">HotLine:</string>
    <string name="_0903669889">0903669889</string>
    <string name="website">Website:</string>
    <string name="http_vienthongthanhnhan_com">http://vienthongthanhnhan.com/</string>
    <string name="a_ch">Địa chỉ:</string>
    <string name="_588_l_c_th_p15_q_g_v_p_tp_hcm">588 Lê Đức Thọ P15 - Q.Gò Vấp - TP.HCM</string>
    <string name="gcm_default_sender_id">795603018899</string>
    <string name="gcm_applicationId">AIzaSyCqvZbl3g42fD9hUZnZ8C6KdPyuVrF6j7E</string>
    <string name="s_i_n_tho_i1">Số điện thoại:</string>
    <string name="ng_ph_ng_qu_n_t_nh_th_nh_ph">Đường-Phường-Quận-Tỉnh/Thành Phố</string>
    <string name="a_ch1">Địa chỉ:</string>
    <string name="btn_register">Đăng ký</string>
    <string name="hint_et_email">Email</string>
    <string name="hint_et_pass">Password</string>
    <string name="checkbox_remember">Ghi nhớ</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="tv_restore">Quên mật khẩu?</string>
    <string name="hint_et_name">Tên</string>
    <string name="tv_register">Đăng ký</string>
    <string name="btn_restore">Lấy lại mật khẩu</string>
    <string name="chupthuvien">Thư viện</string>
    <string name="chupcamera">Máy ảnh</string>
    <string name="huy_dk">Huỷ</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
