<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="100dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/c_ng_ty_tnhh_tmdv_vi_n_th_ng_th_nh_nh_n"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TableRow tools:ignore="UselessParent"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/md_black_1000"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/txt_email"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/emailbackground"
                android:text="@string/vienthongthanhnhan_gmail_com"/>
        </TableRow>
        <TableRow tools:ignore="UselessParent"
                  android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/md_black_1000"
                android:text="@string/di_ng"/>
            <TextView
                android:id="@+id/txt_phone"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/emailbackground"
                android:text="@string/_0901067979"/>
        </TableRow>
        <TableRow tools:ignore="UselessParent"
                  android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/md_black_1000"
                android:text="@string/hotline"/>
            <TextView
                android:id="@+id/txt_hotline"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textColor="@color/emailbackground"
                android:text="@string/_0903669889"/>
        </TableRow>
        <TableRow tools:ignore="UselessParent"
                  android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/md_black_1000"
                android:text="@string/website"/>
            <TextView
                android:id="@+id/txt_website"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/emailbackground"
                android:text="@string/http_vienthongthanhnhan_com"/>
        </TableRow>
        <TableRow tools:ignore="UselessParent"
                  android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/md_black_1000"
                android:text="@string/a_ch"/>
            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/md_black_1000"
                android:text="@string/_588_l_c_th_p15_q_g_v_p_tp_hcm"/>
        </TableRow>
    </TableLayout>

</LinearLayout>