<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/txt_name"
        style="@style/style_edittext"
        android:hint="@string/t_n_kh_ch_h_ng"
        android:text="@string/blank"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_singleLineEllipsis="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/txt_noidung"
        style="@style/style_edittext"
        android:hint="@string/gopy_text"
        android:text="@string/blank"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        app:met_floatingLabel="highlight"
        app:met_minCharacters="10"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_singleLineEllipsis="false" />
    <com.toan_itc.tn.Lib.ripeffect.RippleView
        android:id="@+id/btn_send"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/g_i"/>
    </com.toan_itc.tn.Lib.ripeffect.RippleView>
</LinearLayout>