<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_i_n_tho_i1"
            android:textColor="@color/md_black_1000"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/txt_sdt"
            android:layout_marginLeft="10dp"
            style="@style/style_edittext_thecao"
            android:hint="@string/s_i_n_tho_i1"
            android:text="@string/blank"
            android:textCursorDrawable="@drawable/text_cursor_cyan"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@color/colorPrimaryDark"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_ch1"
            android:textColor="@color/md_black_1000"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/txt_diachi"
            android:layout_marginLeft="10dp"
            style="@style/style_edittext_thecao"
            android:hint="@string/ng_ph_ng_qu_n_t_nh_th_nh_ph"
            android:text="@string/blank"
            android:textCursorDrawable="@drawable/text_cursor_cyan"
            app:met_floatingLabel="highlight"
            app:met_minCharacters="10"
            app:met_primaryColor="@color/colorPrimaryDark"
            app:met_singleLineEllipsis="false" />
    </LinearLayout>
</LinearLayout>