<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_ListView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    android:elevation="30dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white">
    <com.toan_itc.tn.Lib.ripeffect.RippleViewLinear
        android:id="@+id/layout_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/materialize_primary"
            android:text="@string/app_name"
            android:textSize="25sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color1"
                android:text="@string/ten_tk"/>
            <TextView
                android:id="@+id/txt_tennh"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color1"
                android:text="@string/app_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color1"
                android:text="@string/so_tk"/>
            <TextView
                android:id="@+id/txt_tknh"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color1"
                android:text="@string/app_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color1"
                android:text="@string/sdt"/>
            <TextView
                android:id="@+id/txt_sdt"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color1"
                android:text="@string/app_name"
                android:onClick="click_call_phone"/>
        </LinearLayout>
    </com.toan_itc.tn.Lib.ripeffect.RippleViewLinear>
</android.support.v7.widget.CardView>